--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "5.0.0-alpha.115",
     "@mui/material": "^5.11.2",
     "@types/material-ui": "^0.21.12",
     "react": "^18.2.0",
